--- a/Proyecto2Backend/package.json
+++ b/Proyecto2Backend/package.json
@@ -12,13 +12,18 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/fs-extra": "^9.0.13",
+    "@types/multer": "^1.4.7",
     "@types/node": "^14.14.7",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "express": "^4.17.1",
-    "socket.io": "^4.3.2",
+    "fs-extra": "^10.0.0",
+    "helmet": "^4.6.0",
+    "multer": "^1.4.3",
     "yarn": "^1.22.17"
   }
 }
