--- a/Proyecto2Backend/tsconfig.json
+++ b/Proyecto2Backend/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "target": "es6",
-    "lib": ["es6"],
+    "target": "ES2021",
+    "lib": ["ES2021"],
     "sourceMap": true,
     "esModuleInterop": true
   },
