--- a/Proyecto2Backend/package.json
+++ b/Proyecto2Backend/package.json
@@ -11,6 +11,7 @@
     "clean": "tsc --build --clean"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.4.34",
     "@types/express": "^4.17.13",
     "@types/fs-extra": "^9.0.13",
     "@types/multer": "^1.4.7",
@@ -20,6 +21,7 @@
     "typescript": "^4.0.5"
   },
   "dependencies": {
+    "adm-zip": "^0.5.9",
     "express": "^4.17.1",
     "fs-extra": "^10.0.0",
     "helmet": "^4.6.0",
